--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -12,6 +12,10 @@ on:
         type: string
         description: 'Target Image Tag'
         required: true
+      arch_tag:
+        type: string
+        description: 'Architecture tag suffix e.g. amd64 or arm64'
+        required: true
       overwrite_imgs:
         type: string
         default: 'true'
@@ -43,6 +47,10 @@ on:
         type: string
         required: true
         description: e.g, linux/amd64 or linux/arm64
+      runs_on:
+        type: string
+        required: true
+        description: 'Runner label to execute on'
       push:
         type: boolean
         default: false
@@ -59,6 +67,11 @@ on:
         type: string
         default: 'X.Y.Z'
         description: 'Target Image Tag'
+        required: true
+      arch_tag:
+        type: string
+        default: 'amd64'
+        description: 'Architecture tag suffix e.g. amd64 or arm64'
         required: true
       fail_fast:
         type: string
@@ -100,6 +113,10 @@ on:
         default: ''
         required: true
         description: 'Provide the target architecture e.g, linux/amd64, linux/arm64'
+      runs_on:
+        type: string
+        required: true
+        description: 'Runner label to execute on'
       push:
         type: boolean
         default: false
@@ -114,13 +131,11 @@ env:
   SET_LATEST: ${{ inputs.set_latest }}
   ADD_SHA_TAG: ${{ inputs.add_sha_tag }}
   CACHE_PATH: '/tmp/.buildx-cache'
-  BUILDX_BUILDER: 'poly-builder'
-  IP_AMR64_NODE: ${{ vars.IP_AMR64_NODE }}
 
 jobs:
   build-and-push-images:
-    continue-on-error: false
-    runs-on: [self-hosted, Linux, X64]
+    continue-on-error: true
+    runs-on: ${{ inputs.runs_on }}
     permissions:
       contents: read
       packages: write
@@ -142,54 +157,16 @@ jobs:
           registry: ${{ env.IMAGE_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-       
-      # 1. Add remote node to known_hosts to prevent interactive prompt hanging
-      - name: Add Known Hosts
-        env:
-           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-        run: |
-          mkdir -p ~/.ssh
-          echo "IP_ARM64_NODE: $IP_AMR64_NODE"
-          echo "SSH_PRIVATE_KEY: $SSH_PRIVATE_KEY "
-          echo "SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}" 
-          echo "${{ secrets.SSH_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
-        
 
-      # 2. Setup SSH Agent so Docker can connect to the remote node
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      # 3. Set up Docker Buildx
-      # We manually create the builder to ensure the SSH connection works
-      - name: Create Multi-Arch Builder
-        run: |
-          docker buildx create --name poly-builder \
-            --driver docker-container \
-            --platform linux/amd64 \
-            --node node-amd64
-            
-          # Use IP_AMR64_NODE for ARM node's IP address
-          docker buildx create --name poly-builder \
-            --append \
-            --platform linux/arm64 \
-            --node node-arm64 \
-            ssh://ubuntu@$IP_AMR64_NODE
-            
-          docker buildx use poly-builder
-          docker buildx inspect --bootstrap 
-          
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          buildkitd-flags: --debug
-
+          driver: docker-container
 
       - name: Check if image tag already exists
         id: check_tag
         env:
-          IMAGE: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_ORG }}/${{ inputs.app_to_build }}:${{env.TARGET_IMAGE_TAG}}
+          IMAGE: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_ORG }}/${{ inputs.app_to_build }}:${{env.TARGET_IMAGE_TAG}}-${{inputs.arch_tag}}
           OVERWRITE: ${{ env.OVERWRITE_IMAGES }}
         run: |
           if docker manifest inspect "${IMAGE}" > /dev/null 2>&1; then
@@ -214,10 +191,6 @@ jobs:
         if: steps.check_tag.outcome == 'success'
         with:
           images: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_ORG }}/${{ inputs.app_to_build }}
-          tags: |
-            type=raw,value=${{env.TARGET_IMAGE_TAG}}
-            type=raw,value=latest,enable=${{ env.SET_LATEST == 'true'}}
-            type=sha,enable=${{ env.ADD_SHA_TAG == 'true' }}
 
       # Build the image. If the build succeeds, it pushes the image to GitHub
       # Packages. It uses the context parameter to define the build's context
@@ -231,18 +204,32 @@ jobs:
           context: ${{ inputs.image_context }}
           file: ${{ inputs.docker_file }}
           push: ${{ inputs.push }}
-          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          outputs: type=image,name=${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_ORG }}/${{ inputs.app_to_build }},push-by-digest=true,name-canonical=true,push=${{ inputs.push }}
           build-args: |
             COMMIT_SHA=${{ steps.get_commit.outputs.sha }}
             COMMIT_HASH=${{ steps.get_commit.outputs.sha }}
             TAG_NAME=${{ inputs.target_tag }}
 
-      # This step generates an artifact attestation for the image,
-      # which is an unforgeable statement about where and how it was built.
-      # It increases supply chain security for people who consume the
-      # image.
-      # Ref: https://docs.github.com/en/actions/security-for-github-actions/using-artifact-attestations/using-artifact-attestations-to-establish-provenance-for-builds
+      # Export the digest
+      - name: Export digest
+        if: steps.check_tag.outcome == 'success' && inputs.push
+        run: |
+          mkdir -p /tmp/digests
+          digest="${{ steps.push.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+
+      # Upload the digest
+      - name: Upload digest
+        if: steps.check_tag.outcome == 'success' && inputs.push
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ inputs.app_to_build }}-${{ inputs.arch_tag }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+      # This step generates an artifact attestation for the image
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         if: steps.check_tag.outcome == 'success' && inputs.push
